Day3/Task1/terraform/ec2.tf
resource "aws_instance" "app_server" {
  ami           = "ami-830c94e3"
  instance_type = "t4g.micro"

  tags = {
    name = "Yasmin GB Desenvolve"
  }
}
